[issue #4] "ohthejoy" brand: Text in tables should align to the top of the cells.

--- a/brand/ohthejoy/media/css/restdown.css
+++ b/brand/ohthejoy/media/css/restdown.css
@@ -87,6 +87,7 @@ h4 {
 /* tables still need cellspacing="0" in the markup */
 table {
   border-collapse:collapse; border-spacing:0;
+  margin: 20px 0;
 }
 th,
 td {
@@ -95,6 +96,7 @@ td {
   line-height: 23px;
   padding: 0 12px;
   text-align: left;
+  vertical-align: text-bottom;
 }
 th {
   border-collapse: separate;
